# agentstat

./: .env.example  .gitignore  README.md  pyproject.toml
experiments/: 01_ranking_instability.py  02_agent_variance.py  03_agent_variance.py  run_bfcl.py  run_multiturn.py
src/agentstat/: __init__.py  logging_utils.py
src/agentstat/core/: bootstrap.py  power.py  significance.py  variance.py
src/agentstat/data/: __init__.py  schema.py
src/agentstat/harness/: bfcl.py  cache.py  fixture.py  multiturn.py  providers.py  rollout.py  runner.py  scoring.py
src/agentstat/ranking/: stability.py
tests/: test_bootstrap.py  test_fixture.py  test_harness.py  test_logging.py  test_multiturn.py  test_power.py  test_rollout.py  test_runner.py  test_scoring.py  test_significance.py  test_stability.py  test_variance.py
